change technologies icons to flipping-over

--- a/css/build.css
+++ b/css/build.css
@@ -247,24 +247,22 @@ section {
   background-color: #7ac0c0; }
   .about-me .icon {
     align-items: center;
+    backface-visibility: hidden;
     background: #D35244 url("../img/built/grain.png");
     border-radius: 20%;
     box-shadow: 0 0 0 4px #f6edd8, 0 0 0 8px #D35244;
     color: #f6edd8;
     display: flex;
-    font-size: 4em;
-    height: 100px;
+    height: 120px;
     justify-content: center;
-    margin: 30px auto;
-    transition: .5s all;
-    width: 100px;
+    position: absolute;
+    transition: .5s transform;
+    width: 120px;
     transition: 1.5s all; }
     @media (max-width: 576px) {
       .about-me .icon {
-        font-size: 2.5em;
-        height: 50px;
-        margin: 20px auto;
-        width: 50px; } }
+        height: 100px;
+        width: 100px; } }
     .about-me .icon:hover {
       transform: rotate(360deg); }
     .about-me .icon a, .about-me .icon a:visited, .about-me .icon a:active {
@@ -318,34 +316,66 @@ section {
   background-color: #f6edd8;
   outline-color: #4c5057; }
 
-.technologies-item h3 {
-  margin: 10px auto 30px; }
-
 .technologies-item img {
   width: 100%; }
 
-.technologies-item .icon {
-  align-items: center;
-  background: #D35244 url("../img/built/grain.png");
+.flip3d {
   border-radius: 20%;
-  box-shadow: 0 0 0 4px #f6edd8, 0 0 0 8px #D35244;
-  color: #f6edd8;
-  display: flex;
-  font-size: 4em;
-  height: 100px;
-  justify-content: center;
-  margin: 30px auto;
-  transition: .5s all;
-  width: 100px; }
+  height: 120px;
+  margin: 50px auto;
+  position: relative;
+  width: 120px; }
+  .flip3d:hover .front {
+    transform: perspective(600px) rotateY(-180deg); }
+  .flip3d:hover .back {
+    transform: perspective(600px) rotateY(0deg); }
   @media (max-width: 576px) {
-    .technologies-item .icon {
-      font-size: 2.5em;
-      height: 50px;
-      margin: 20px auto;
-      width: 50px; } }
-  .technologies-item .icon:hover {
-    box-shadow: 0 0 0 4px #f6edd8, 0 0 0 8px #D35244, 0 25px 15px -5px #4c5057;
-    transform: translate(0, -15%); }
+    .flip3d {
+      height: 100px;
+      width: 100px; } }
+  .flip3d .front {
+    align-items: center;
+    backface-visibility: hidden;
+    background: #D35244 url("../img/built/grain.png");
+    border-radius: 20%;
+    box-shadow: 0 0 0 4px #f6edd8, 0 0 0 8px #D35244;
+    color: #f6edd8;
+    display: flex;
+    height: 120px;
+    justify-content: center;
+    position: absolute;
+    transition: .5s transform;
+    width: 120px;
+    font-size: 4em;
+    transform: perspective(600px) rotateY(0deg); }
+    @media (max-width: 576px) {
+      .flip3d .front {
+        height: 100px;
+        width: 100px; } }
+  .flip3d .back {
+    align-items: center;
+    backface-visibility: hidden;
+    background: #D35244 url("../img/built/grain.png");
+    border-radius: 20%;
+    box-shadow: 0 0 0 4px #f6edd8, 0 0 0 8px #D35244;
+    color: #f6edd8;
+    display: flex;
+    height: 120px;
+    justify-content: center;
+    position: absolute;
+    transition: .5s transform;
+    width: 120px;
+    font-size: 2em;
+    transform: perspective(600px) rotateY(180deg); }
+    @media (max-width: 576px) {
+      .flip3d .back {
+        height: 100px;
+        width: 100px; } }
+    .flip3d .back.small {
+      font-size: 1.5em; }
+      @media (max-width: 576px) {
+        .flip3d .back.small {
+          font-size: 1.3em; } }
 
 .contact {
   background-color: #4c5057;
