--- a/sass/variables.sass
+++ b/sass/variables.sass
@@ -19,22 +19,20 @@ $font-decoration: Bazar, sans-serif
 
 @mixin icon-style
   align-items: center
+  backface-visibility: hidden
   background: $color-red url("../img/built/grain.png")
   border-radius: 20%
   box-shadow: 0 0 0 4px $color-beige, 0 0 0 8px $color-red
   color: $color-beige
   display: flex
-  font-size: 4em
-  height: 100px
+  height: 120px
   justify-content: center
-  margin: 30px auto
-  transition: .5s all
-  width: 100px
+  position: absolute
+  transition: .5s transform
+  width: 120px
   @media (max-width: 576px)
-    font-size: 2.5em
-    height: 50px
-    margin: 20px auto
-    width: 50px
+    height: 100px
+    width: 100px
 
 @mixin outline($color)
   outline: 1px dashed $color
