--- a/sass/main.sass
+++ b/sass/main.sass
@@ -228,18 +228,13 @@ section
       background: $color-beige
       color: $color-almost-black
 
-// FOOTER
-.footer
-  bottom: 0
-  color: $color-beige
-  height: 60px
-  position: absolute
-  text-align: center
-  width: 100%
-  a
+.social
+  margin: 50px auto
+  i
+    font-size: 3em
+    margin: 0 50px
     color: $color-beige
     &:active, &:visited
       color: $color-beige
     &:hover
-      color: $color-gray-light
-      text-decoration: none
+      color: $color-almost-black
