--- a/css/build.css
+++ b/css/build.css
@@ -245,28 +245,6 @@ section {
 
 .about-me {
   background-color: #7ac0c0; }
-  .about-me .icon {
-    align-items: center;
-    backface-visibility: hidden;
-    background: #D35244 url("../img/built/grain.png");
-    border-radius: 20%;
-    box-shadow: 0 0 0 4px #f6edd8, 0 0 0 8px #D35244;
-    color: #f6edd8;
-    display: flex;
-    height: 120px;
-    justify-content: center;
-    position: absolute;
-    transition: .5s transform;
-    width: 120px;
-    transition: 1.5s all; }
-    @media (max-width: 576px) {
-      .about-me .icon {
-        height: 100px;
-        width: 100px; } }
-    .about-me .icon:hover {
-      transform: rotate(360deg); }
-    .about-me .icon a, .about-me .icon a:visited, .about-me .icon a:active {
-      color: #f6edd8; }
 
 .portfolio {
   background-color: #e68966; }
@@ -274,13 +252,17 @@ section {
 .portfolio-item {
   background: white;
   border-radius: 5px;
-  margin: 20px; }
+  margin: 20px;
+  overflow: hidden; }
+  .portfolio-item:hover img {
+    transform: scale(1.3) translate(0%, 8%); }
   .portfolio-item div {
     border: 1px solid transparent;
     position: relative; }
   .portfolio-item img {
     padding: 5px;
-    width: 100%; }
+    width: 100%;
+    transition: transform 1s ease; }
   .portfolio-item i {
     background: white;
     border-radius: 50%;
