--- a/sass/main.sass
+++ b/sass/main.sass
@@ -113,6 +113,18 @@ section
 //  ABOUT ME SECTION
 .about-me
   background-color: $color-blue
+  i
+    color: $color-gray-dark
+    font-size: 4em
+    margin-top: 50px
+    padding: 10px
+    text-shadow: 0 0 0 $color-gray-dark
+    transition: 1s all ease
+    &:active, &:visited
+      color: $color-gray-dark
+    &:hover
+      text-shadow: 0 20px 0 $color-gray-dark
+      transform: translate(0, 20px)
 
 //  PORTFOLIO SECTION
 .portfolio
