--- a/sass/main.sass
+++ b/sass/main.sass
@@ -117,6 +117,8 @@ section
   background-color: $color-blue
   overflow: hidden
   z-index: 0
+  p
+    padding: 0 12px
 
   .ribbon
     background: $color-yellow
