change img size in technologies section

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -151,7 +151,7 @@ section
       border-right-color: rgba(0, 0, 0, 0)
       box-shadow: rgba(0, 0, 0, 0.3) -2px 2px 1px -1px
       right: -37px
-
+  // TEXT IN RIBBON
   .ribbon-content
     font-family: Bazar, sans-serif
     letter-spacing: 0.1em
@@ -298,7 +298,7 @@ section
 
 .technologies-item
   img
-    width: 100%
+    width: 70%
 
 .flip3d
   border-radius: 20%
