--- a/sass/main.sass
+++ b/sass/main.sass
@@ -249,16 +249,30 @@ section
   border-radius: 5px
   margin: 20px
   overflow: hidden
-  &:hover img
-    transform: scale(1.3) translate(0%, 8%)
-
-  div
+  position: relative
+  // OVERLAY WITH TEXT
+  &:hover .item-text
+    opacity: 1
+  .item-text
+    background: rgba(255, 255, 255, .85)
+    bottom: 30%
+    left: 5px
+    opacity: 0
+    position: absolute
+    right: 5px
+    text-align: center
+    top: 5px
+    transition: all 1s ease
+    p
+      color: black
+      padding: 0
+  // LINK AND GITHUB ICONS
+  .links
     border: 1px solid transparent
     position: relative
   img
     padding: 5px
     width: 100%
-    transition: transform 1s ease
 
   i
     background: white
@@ -270,7 +284,7 @@ section
     left: 50%
     line-height: 1.6em
     position: absolute
-    text-shadow: 2px 2px 5px $color-gray-dark
+    //text-shadow: 2px 2px 5px $color-gray-dark
     top: -30%
     transform: translate(20%)
     transition: .5s all
