--- a/sass/main.sass
+++ b/sass/main.sass
@@ -230,7 +230,7 @@ section
     margin-top: 50px
     padding: 10px
     text-shadow: 0 0 0 $color-gray-dark
-    transition: 1s all ease
+    transition: .3s all ease
     @media (max-width: 576px)
       margin-top: 0
     &:active, &:visited
