--- a/sass/main.sass
+++ b/sass/main.sass
@@ -52,7 +52,7 @@ nav
         text-decoration: none
         text-shadow: 2px 2px 5px $color-black-opacity
         text-transform: uppercase
-        &:hover
+        &:not(#toggleMenuIcon):hover
           color: $color-orange
 
 @media (max-width: 768px)
