--- a/sass/main.sass
+++ b/sass/main.sass
@@ -350,6 +350,7 @@ section
     border: none
     font-family: $font-primary
     margin: 0 auto
+    padding: 20px
     width: 550px
     @media (max-width: 576px)
       width: 100%
