add sending mail with ajax add mail script move js to src folder, and concat them into one in build folder add contact-message div for information after send mail

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -368,6 +368,19 @@ section
       background: $color-beige
       color: $color-almost-black
 
+  .success
+    @include contact-message
+    background-color: #dff0d8
+    border: 1px solid #d6e9c6
+    color: #468847
+
+  .error
+    @include contact-message
+    background-color: #f2dede
+    border: 1px solid rgba(185, 74, 72, 0.3)
+    color: #b94a48
+
+
 .social
   margin: 50px auto
   i
