--- a/css/build.css
+++ b/css/build.css
@@ -514,6 +514,28 @@ section {
     .contact input.button, .contact textarea.button {
       background: #f6edd8;
       color: #383A3C; }
+  .contact .success {
+    background-color: #f2dede;
+    border-radius: 4px;
+    border: 1px solid rgba(185, 74, 72, 0.3);
+    color: #b94a48;
+    margin-bottom: 0.75rem;
+    padding: 10px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    background-color: #dff0d8;
+    border: 1px solid #d6e9c6;
+    color: #468847; }
+  .contact .error {
+    background-color: #f2dede;
+    border-radius: 4px;
+    border: 1px solid rgba(185, 74, 72, 0.3);
+    color: #b94a48;
+    margin-bottom: 0.75rem;
+    padding: 10px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    background-color: #f2dede;
+    border: 1px solid rgba(185, 74, 72, 0.3);
+    color: #b94a48; }
 
 .social {
   margin: 50px auto; }
