--- a/sass/variables.sass
+++ b/sass/variables.sass
@@ -37,3 +37,12 @@ $font-decoration: Bazar, sans-serif
 @mixin outline($color)
   outline: 1px dashed $color
   outline-offset: -10px
+
+@mixin contact-message
+  background-color: #f2dede
+  border-radius: 4px
+  border: 1px solid rgba(185, 74, 72, 0.3)
+  color: #b94a48
+  margin-bottom: 0.75rem
+  padding: 10px
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5)
